add pseudo code

--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
   <title>Code Quiz</title>
 </head>
 <body>
-  
+  <!-- 
+    <header div>
+      <div> View Highscores
+      <div> Timer
+    <main Content div
+        Coding Quiz Challenge
+        <<prompt div>
+          Get ready to take a test
+        <Start Quiz div>
+
+    First Question
+          Option 1
+          Option 2
+          Option 3
+          Option 4
+        
+      Correct or Incorrect
+      
+   -->
 
   <script src="script.js"></script>
 </body>
