test loading content to DOM, declare question array, setup load question function

--- a/index.html
+++ b/index.html
@@ -9,14 +9,11 @@
 </head>
 <body>
   <!-- Bootstrap Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid d-inline">
       <a class="navbar-brand" href="#" id="highscore">View Highscore</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
       <div class="container-fluid mr-auto d-inline justify-content-end" id="navbarText">
-        <span class="navbar-text mr-auto">
+        <span class="navbar-text mr-auto timer">
           Time: 
         </span>
       </div>
@@ -25,13 +22,13 @@
 
   <div class="row align-items-center">
     
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4 fs-3 mt-5"><header>Quiznak! The game of quizzes!</header></div>
-    <div class="col-lg-4"></div>
+    <div class="col-4"></div>
+    <div class="col-4 fs-3 mt-5"><header>Quiznak! The game of quizzes!</header></div>
+    <div class="col-4"></div>
 
     <div class="row">
-      <div class="col-lg-4"></div>
-      <div class="col-lg-4">
+      <div class="col-4"></div>
+      <div class="col-4">
         <div class="card border border-primary border-5 rounded-3 my-5" style="width: 40rem;">
           <div class="card-header" id="question">
             What was the first commercially successful video game?
@@ -45,14 +42,14 @@
           <footer class="footer visually-hidden" id="answer">Correct!/Incorrect</footer>
         </div>
       </div>
-      <div class="col-lg-4"></div>
+      <div class="col-4"></div>
     </div>
 
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4 justify-content-sm-center">
+    <div class="col-4"></div>
+    <div class="col-4 justify-content-sm-center">
       <button type="button" class="btn btn-primary" id="start">Start Quiz</button>
     </div>
-    <div class="col-lg-4"></div>
+    <div class="col-4"></div>
 
   </div>
 
