--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container-fluid d-inline">
       <a class="navbar-brand" href="#" id="highscore">View Highscore</a>
       <div class="container-fluid mr-auto d-inline justify-content-end" id="navbarText">
-        <span class="navbar-text mr-auto timer">
+        <span class="navbar-text mr-auto" id="timer">
           Time: 
         </span>
       </div>
@@ -31,13 +31,13 @@
       <div class="col-4">
         <div class="card border border-primary border-5 rounded-3 my-5" style="width: 40rem;">
           <div class="card-header" id="question">
-            What was the first commercially successful video game?
+            Question?
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item" id="optionA">Pong</li>
-            <li class="list-group-item" id="optionB">Donkey Kong Country</li>
-            <li class="list-group-item" id="optionC">Super Mario Bros</li>
-            <li class="list-group-item" id="optionD">Shaq Fu</li>
+            <li class="list-group-item" id="optionA">Option A</li>
+            <li class="list-group-item" id="optionB">Option B</li>
+            <li class="list-group-item" id="optionC">Option C</li>
+            <li class="list-group-item" id="optionD">option D</li>
           </ul>
           <footer class="footer visually-hidden" id="answer">Correct!/Incorrect</footer>
         </div>
