--- a/index.html
+++ b/index.html
@@ -20,39 +20,40 @@
     </div>
   </nav>
 
-  <div class="row align-items-center">
-    
-    <div class="col-4"></div>
-    <div class="col-4 fs-3 mt-5"><header>Quiznak! The game of quizzes!</header></div>
-    <div class="col-4"></div>
-
-    <div class="row">
+  <div class="container">
+    <div class="row align-items-center">
+      
       <div class="col-4"></div>
-      <div class="col-4">
-        <div class="card border border-primary border-5 rounded-3 my-5" style="width: 40rem;">
-          <div class="card-header" id="question">
-            Question?
+      <div class="col-4 fs-3 mt-5"><header>Quiznak! The game of quizzes!</header></div>
+      <div class="col-4"></div>
+
+      <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4">
+          <section id="prompt"><p>Try to answer as many questions before time runs out. Wrong answers will incur a penalty.</p></section>
+          <div class="card border border-primary border-5 rounded-3 my-5 hide" id="questionCard" style="width: 40rem;">
+            <div class="card-header" id="question">
+              Question?
+            </div>
+            <button type="button" class="btn btn-light my-2" id="optionA">Option A</button>
+            <button type="button" class="btn btn-light my-2" id="optionB">Option B</button>
+            <button type="button" class="btn btn-light my-2" id="optionC">Option C</button>
+            <button type="button" class="btn btn-light my-2" id="optionD">Option D</button>
+            <footer class="footer hide" id="correct">Correct!</footer>
+            <footer class="footer hide" id="incorrect">Incorrect!</footer>
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item" id="optionA">Option A</li>
-            <li class="list-group-item" id="optionB">Option B</li>
-            <li class="list-group-item" id="optionC">Option C</li>
-            <li class="list-group-item" id="optionD">option D</li>
-          </ul>
-          <footer class="footer visually-hidden" id="answer">Correct!/Incorrect</footer>
         </div>
+        <div class="col-4"></div>
+      </div>
+
+      <div class="col-4"></div>
+      <div class="col-4 justify-content-sm-center">
+        <button type="button" class="btn btn-primary" id="start">Start Quiz</button>
       </div>
       <div class="col-4"></div>
-    </div>
 
-    <div class="col-4"></div>
-    <div class="col-4 justify-content-sm-center">
-      <button type="button" class="btn btn-primary" id="start">Start Quiz</button>
     </div>
-    <div class="col-4"></div>
-
   </div>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
