load scores to Highscore page; refactor hide class assignment

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="col"></div>
       <div class="col-4 fs-3 mt-5"><header>Quiznak! The game of quizzes!</header></div>
       <div class="col"></div>
-
+      
       <!-- Quiz section -->
       <section class="row container-fluid">
         <div class="col-3"></div>
@@ -76,11 +76,11 @@
               <div class="card-header">
                 Initials<span class="float-end">Highscore</span>
               </div>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">First player<span class="float-end">70</span></li>
+              <ul class="list-group list-group-flush" id="hsList">
+                <!-- <li class="list-group-item">First player<span class="float-end">70</span></li>
                 <li class="list-group-item">Second player<span class="float-end">60</span></li>
                 <li class="list-group-item">Third player<span class="float-end">50</span></li>
-                <li class="list-group-item">Fourth player<span class="float-end">40</span></li>
+                <li class="list-group-item">Fourth player<span class="float-end">40</span></li> -->
               </ul>
             </div>
           </div>
@@ -93,13 +93,14 @@
         <div class="col-5"></div>
         <div class="col-2 justify-content-sm-center">
           <button type="button" class="btn btn-primary mt-5" id="start">Start Quiz</button>
+          <button type="button" class="btn btn-primary mt-5 hide" id="back">Play Again?</button>
         </div>
         <div class="col-5"></div>
       </div>
 
     </div>
   </div>
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
