--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span class="navbar-text float-end mr-auto" id="timer">Time: 00</span>
       </div>
     </div>
-  </nav>
+  </nav> 
 
   <div class="container container-fluid">
     <div class="row align-items-center">
@@ -38,7 +38,10 @@
           <section>
             <p id="prompt">
               Do you want to play a game? Let's see how good your knowledge of videogames are. Try to answer as many
-              questions before time runs out. Wrong answers will incur a penalty. It will not be pleasant
+              questions before time runs out. Wrong answers will incur a penalty. It will not be pleasant.
+              <br>
+              <br>
+              Adding 100 seconds to the clock. Go!
             </p>
 
             <div class="card border border-primary border-5 rounded-3 my-5 hide" id="questionCard"
@@ -48,7 +51,7 @@
               <button type="button" class="btn btn-light my-2" id="optionB">Option B</button>
               <button type="button" class="btn btn-light my-2" id="optionC">Option C</button>
               <button type="button" class="btn btn-light my-2" id="optionD">Option D</button>
-              <footer class="footer hide" id="correct">Correct!</footer>
+              <footer class="footer" id="correct">Correct!</footer>
               <footer class="footer hide" id="incorrect">Incorrect!</footer>
             </div>
           </section>
